--- a/index.html
+++ b/index.html
@@ -1,27 +1,34 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/favicon.jpg" type="image/jpeg" />
-    <link rel="alternate" type="application/rss+xml" title="what cardinal said" href="/rss.xml" />
-    <link rel="alternate" type="application/feed+json" title="what cardinal said" href="/feed.json" />
-    <title>what cardinal said | Legal Philosophy & Absurdist Thought</title>
-    <meta name="description" content="Exploring the intersection of law, aesthetic theory, and absurdist philosophy" />
-    <meta name="author" content="what cardinal said" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@300;400;600;700&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="what cardinal said | Legal Philosophy & Absurdist Thought" />
-    <meta property="og:description" content="Exploring the intersection of law, aesthetic theory, and absurdist philosophy" />
-    <meta property="og:type" content="website" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="/logo-clean.png" type="image/png" />
+  <link rel="alternate" type="application/rss+xml" title="what cardinal said" href="/rss.xml" />
+  <link rel="alternate" type="application/feed+json" title="what cardinal said" href="/feed.json" />
+  <title>WHAT CARDINAL SAID | Legal Absurdism & Cyber Minimalism</title>
+  <meta name="description"
+    content="Where legal discourse meets aesthetic theory and absurdist thought— exploring the paradoxes at the intersection of law and meaning." />
+  <meta name="author" content="Ravs0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Inter:wght@300;400;500;600&family=JetBrains+Mono:wght@300;400;500&display=swap"
+    rel="stylesheet">
 
-    <meta name="twitter:card" content="summary_large_image" />
-  </head>
+  <meta property="og:title" content="WHAT CARDINAL SAID | Legal Absurdism" />
+  <meta property="og:description" content="Systematic explorations into the silent state and the void of meaning." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="/logo-clean.png" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+</head>
+
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
